--- a/style.css
+++ b/style.css
@@ -127,32 +127,78 @@ section {
 }
 
 
-/* #redbar::-moz-progress-bar {
-  background-color: red;
-} */
+
 .competence {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 
 
 }
 
 .left {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    width: 30%;
-
-
+   
+    height: 100%;
+    width: 50%;
+   
 }
+.left ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    height: 80%;
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.342);
+    border-radius: 5%;
+}
+.left li{
+    padding: 30px;
+    list-style: none;
+    font-weight: 200;
+    text-transform: uppercase;
+}
+.left progress{
+    display: flex;
+}
+progress  {
+    -webkit-appearance: none;
+    width: 600px;
+    
+}
+
 
 .right {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    width: 30%;
+    
+    height: 100%;
+    width: 50%;
+    
+    
+}
+.right img{
+    width: 400px;
+    margin: 20px;
+}
+.right  input[type="Submit"]{
+    width: 100%;
+    height: 50px;
+    border: 1px solid;
+    background-color: #2691d9;
+    font-size: 20px;
+    font-weight: 700;
+}
+.right  input[type="Submit"]:hover{
+    background-color: rgba(255, 0, 0, 0.555);
 
 }
+
 
 form {
 
@@ -220,7 +266,7 @@ form {
 
 
 .rightI {
-    
+
     height: 100%;
     width: 50%;
     display: flex;
@@ -229,21 +275,23 @@ form {
     align-items: center;
 }
 
-.rightI div{
+.rightI div {
     background-color: rgba(255, 255, 255, 0.342);
     border-radius: 5%;
-    
+
     height: 50%;
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
 }
-article{
+
+article {
     padding: 40px;
 }
+
 .rightI img {
     width: 40px;
 }
@@ -265,11 +313,13 @@ article{
     align-items: center;
     padding-left: 10px;
 }
-article a{
+
+article a {
     text-decoration: 0;
     color: black;
     font-size: larger;
 }
-article a:hover{
+
+article a:hover {
     color: blue;
 }
