--- a/style.css
+++ b/style.css
@@ -190,12 +190,14 @@ progress  {
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background-color: #2691d9;
+    background-color: #4d41ec;
     font-size: 20px;
     font-weight: 700;
+    border-radius: 10%;
 }
 .right  input[type="Submit"]:hover{
-    background-color: rgba(255, 0, 0, 0.555);
+    background-color: rgb(255, 255, 255);
+    transition: .5s;
 
 }
 
